<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="14"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@android:style/TextAppearance.Medium"
            android:id="@+id/tilMovieName"
            android:layout_weight="1">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@android:color/black"/>

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">



            <Button
                android:id="@+id/btnChooseGenres"
                android:text="Choose genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:weightSum="12">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acting"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRateActing"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutActing"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRatePlot"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layoutPlot"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/montage"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRateMontage"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutMontage"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_effects"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRateSpecialEffects"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layoutSpecialEffects"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_track"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRateSoundTrack"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutSoundTrack"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_effect"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"
                />

            <TextView
                android:id="@+id/tvRateTouchEffect"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_mediumsize"/>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layoutTouchEffect"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="General Rate:"
                android:textSize="@dimen/text_mediumsize"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                />

            <EditText
                android:id="@+id/etGeneralRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="15dp"
                android:hint="0.0"
                android:inputType="numberDecimal"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnBackToMaimMenu"
                android:text="Back"
                android:textSize="@dimen/text_smallsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />

            <Button
                android:id="@+id/btnAddMovie"
                android:text="ADD"
                android:textSize="@dimen/text_smallsize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>